stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_duplicate_lambda_param.snap
---
source: tests/fixtures.rs
assertion_line: 1335
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/duplicate_lambda_param.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/types/duplicate_lambda_param.ml:2:19]
 1 │ fn main() {
 2 │   let bad = fn(x, x) { x };
   ·                   ┬
   ·                   ╰── duplicate parameter name
 3 │   dbg(bad(1, 2))
   ╰────
  help: choose a unique name for each parameter
